--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
-    "file-loader": "^6.1.0",
+    "file-loader": "^6.2.0",
     "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -77,7 +77,9 @@
     "react-icons": "^3.11.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "styled-components": "^5.1.1",
-    "ttf-loader": "^1.0.2"
+    "ttf-loader": "^1.0.2",
+    "url-loader": "^4.1.1",
+    "webpack-node-externals": "^2.5.2"
   },
   "build": {
     "appId": "your.id",
